<?xml version="1.0" encoding="utf-8"?>

<!-- Demonstrates receiving activity results.
     See corresponding Java code com.android.sdk.app.ReceiveResult.java. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="4dip"
    android:gravity="center_horizontal"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="8dip"
        android:text="@string/pick_module"/>

    <Button android:id="@+id/corky"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/corky">
        <requestFocus />
    </Button>

    <Button android:id="@+id/violet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/violet">
    </Button>
    <Button android:id="@+id/margerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/margerie">
    </Button>
    <!--CheckBox android:id="@+id/check1"
        android:paddingBottom="24sp"
        android:paddingTop="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/setup_carts_params" /-->

    <EditText android:id="@+id/edit_carts_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="10"
        android:minEms="10"
        android:hint="@string/glacierBayNP" />

    <Button android:id="@+id/strUtils"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/strUtils">
    </Button>

</LinearLayout>

